--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ systemctl enable httpd
 systemctl start httpd
 
 # Create webpage and health check file
-echo "<h1>Hello from provider EC2</h1>" > /var/www/html/index.html
+echo "<h1>Hello iam version 2</h1>" > /var/www/html/index.html
 echo "OK" > /var/www/html/health
 
 # Wait until Apache is fully ready and serving /health
