--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My First Page</title>
-  <link rel="stylesheet" href="style.css" />
+
+  <!-- ✅ This line links your HTML to your external CSS file -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
@@ -14,3 +16,7 @@
   </div>
 </body>
 </html>
+
+
+
+
