--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to My Web Page90000</h1>
+    <h1>hello there this is chitti</h1>
     <p>This is a simple HTML and CSS example.</p>
     <button>Click Me</button>
   </div>
